[package]
name = "fluid"
version = "0.1.0"
edition = "2018"

[dependencies]
ndarray = "0.16"
sprs = "0.11"
sprs-ldl = "0.10"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pbr = "1.0"
image = "0.25"
hdf5 = { package = "hdf5-metno", version = "0.9" }
itertools = "0.13"

[profile.release]
lto = true
codegen-units = 1
